Fixed textcontent overlapping with footer on some mobile browsers

--- a/src/styles.css
+++ b/src/styles.css
@@ -82,20 +82,25 @@ a svg {
 }
 
 @media only screen and (max-width: 768px) {
-  #canvasContainer {
+  #canvasContainer,
+  #textContent {
     width: 100%;
-    height: 50vh;
+    float: none;
+    display: block; /* Stacked vertically */
+    overflow-y: auto; /* Allows scrolling if content overflows */
   }
 
   #textContent {
-    width: 100%;
     padding: 20px;
+    margin-bottom: 50px; /* Manage space above the footer*/
   }
 
   .footer {
-    justify-content: center;
-    left: 0; /* Extend across the full width */
-    bottom: 10px; /* Adjust for mobile */
+    position: fixed;
+    bottom: 0; /* Aligns footer at the bottom */
+    left: 0;
+    width: 100%;
+    padding: 10px 0; /* Adjust padding for visual comfort */
   }
 
   .icon {
@@ -103,6 +108,6 @@ a svg {
   }
 
   .icon img {
-    width: 20px; /* Revert to original size for mobile */
+    width: 20px;
   }
 }
